@@ -33,6 +33,7 @@ version <next>:
 - colorspectrum source video filter
 - RTP packetizer for uncompressed video (RFC 4175)
 - bitpacked encoder
+- VideoToolbox VP9 hwaccel
 
 
 version 4.4:
